# bigbutton

board/bigbutton/: bigbutton-cache.lib  bigbutton.dcm  bigbutton.kicad_pcb  bigbutton.kicad_pro  bigbutton.kicad_sch  bigbutton.kicad_sym  bigbutton.lib  bigbutton.pro  bigbutton.sch  fp-lib-table  sym-lib-table
board/bigbutton/bigbutton.pretty/: DX07S016JA1.kicad_mod  SW_BIG_SWITCH.kicad_mod  USB_C_Receptacle_HRO_TYPE-C-31-M-13.kicad_mod  USB_C_Receptacle_HRO_TYPE-C-31-M-13_handsolder.kicad_mod
board/bigbutton/gerber/: bigbutton-B_Cu.gbr  bigbutton-B_Mask.gbr  bigbutton-B_SilkS.gbr  bigbutton-B_Silkscreen.gbr  bigbutton-Edge_Cuts.gbr  bigbutton-F_Cu.gbr  bigbutton-F_Mask.gbr  bigbutton-F_SilkS.gbr  bigbutton-F_Silkscreen.gbr  bigbutton-NPTH.drl  bigbutton-PTH.drl  bigbutton-job.gbrjob  bigbutton.drl
firmware/: Cargo.toml  jlink.gdb  memory.x
firmware/.cargo/: config
firmware/src/: main.rs
